--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "google-map-react": "^1.1.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-typography": "^0.16.19",
