--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-modal-image": "^2.5.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-noriega": "^0.16.19"
