--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-sharp": "^2.5.2",
     "google-map-react": "^1.1.7",
+    "lora": "^0.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-burger-menu": "^2.6.13",
